handle feedback and unitest